<resources>
    <string name="app_name">ElectroPi</string>
    <string name="deviceName">Device Nickname</string>
    <string name="serverIp">Server IP</string>
    <string name="seconds">seconds</string>
    <string name="save">SAVE</string>
    <string name="electropi">ElectroPi</string>
    <string name="forandroid">for Android</string>
    <string name="version">ver 0.1</string>
    <string name="help">Need HELP?</string>
    <string name="settings_saved">Settings Saved</string>
    <string name="app_details">ElectroPi 2012-2015 by Connor Nishijima</string>
    <string name="developedby">App Developed by Technically Covered</string>
</resources>
