<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity$PlaceholderFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dip"
                android:src="@drawable/logo_whole_app"
                android:contentDescription="@string/electropi" />

            <TextView android:text="@string/electropi"
                style="@style/headerText"
                />
            <TextView android:text="@string/forandroid"
                style="@style/subheaderText"
                />
            <TextView android:text="@string/version"
                style="@style/baseText"
                android:textSize="20sp"
                />

            <TextView android:text="@string/serverIp"
                style="@style/baseText"
                />
            <EditText
                android:inputType="text"
                android:id="@+id/epiIp"
                style="@style/highlightText"
                ><requestFocus/></EditText>
            <TextView android:text="@string/deviceName"
                style="@style/baseText"
                />
            <EditText
                android:inputType="text"
                android:id="@+id/deviceName"
                style="@style/highlightText"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/button"
                    android:text="@string/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@color/highlightColor"
                    android:textColor="@color/buttonFontColor"
                    android:layout_centerInParent="true"/>
                </RelativeLayout>

            <TextView android:text="@string/settings_saved"
                style="@style/baseText"
                android:textColor="@color/confirmColor"
                android:visibility="invisible"
                android:id="@+id/settingsSaved"
                />
            <TextView android:text="@string/app_details"
                style="@style/baseText"
                android:textSize="18sp"
                />
            <TextView android:text="@string/developedby"
                style="@style/baseText"
                android:textSize="18sp"
                android:id="@+id/appDeveloped"
                />
            </LinearLayout>
        </ScrollView>
